--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "@tailwindcss/postcss": "^0.1.0"
+    "tailwindcss": "^3.3.0"
   }
 } 
