--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "vite": "^4.1.0",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "tailwindcss": "^3.3.0"
+    "autoprefixer": "^10.4.0"
   }
 } 
